--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
         <span class="project-meta">{{ projects.date | date: "%b %-d, %Y" }}</span>
 
         <h2>
-          <a class="project-link" href="{{ project.url | prepend: site.baseurl }}">{{ post.title }}</a>
+          <a class="project-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
         </h2>
       </li>
     {% endfor %}
